Finished notating for the hexamaze directory classes